--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,12 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.0
+aioresponses==0.7.8
+aiosignal==1.4.0
 alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.11.0
+asyncpg==0.30.0
+attrs==25.4.0
 certifi==2025.10.5
 click==8.3.0
 dnspython==2.8.0
@@ -8,27 +14,40 @@ email-validator==2.3.0
 fastapi==0.118.2
 fastapi-cli==0.0.13
 fastapi-cloud-cli==0.3.0
+frozenlist==1.8.0
+fuzzywuzzy==0.18.0
 greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+Levenshtein==0.27.1
 Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+multidict==6.7.0
 orjson==3.11.3
+packaging==25.0
+pluggy==1.6.0
+propcache==0.4.1
+psycopg2-binary==2.9.11
 pydantic==2.12.0
 pydantic-extra-types==2.10.6
 pydantic-settings==2.11.0
 pydantic_core==2.41.1
 Pygments==2.19.2
+pytest==8.4.2
+pytest-asyncio==1.2.0
 python-dotenv==1.1.1
+python-Levenshtein==0.27.1
 python-multipart==0.0.20
 PyYAML==6.0.3
+RapidFuzz==3.14.1
 rich==14.1.0
 rich-toolkit==0.15.1
 rignore==0.7.0
@@ -46,3 +65,4 @@ uvicorn==0.37.0
 uvloop==0.21.0
 watchfiles==1.1.0
 websockets==15.0.1
+yarl==1.22.0
